# qte_thesis

./: .gitignore  LICENSE  README.md  config.py  environment.yml  pyproject.toml  run_ds.sbatch  run_os.sbatch  shell_sbatch.txt  weighted_double_selection.ipynb
src/analysis/: __init__.py  density_estimation.py  double_selection.py  lasso.py  minimal_simulation.py  monte_carlo.py  orthogonal_score.py  quantile_regression.py  quick_demo.py  standard_error.py  task_minimal_simulation.py
src/qte_thesis/: __init__.py  config.py
src/qte_thesis/analysis/: __init__.py  density_estimation.py  lasso.py  orthogonal_score.py  quantile_regression.py  quick_demo.py  standard_error.py
src/qte_thesis/final/: __init__.py  dgp.py  monte_carlo.py  plot.py  run_real_data_ds.py  run_real_data_os.py  simulate_on_cluster.py  simulation.py  simulation_n100.py  simulation_n1000.py  simulation_n200.py  simulation_n300.py  simulation_n500.py  simulation_n700.py  task_gen_data.py  task_gen_real_data.py  task_plot.py  task_simulation.py  task_tables.py
src/qte_thesis/final/marvin_files/: run_ds.sbatch  run_mc_n100.sbatch  run_mc_n1000.sbatch  run_mc_n200.sbatch  run_mc_n300.sbatch  run_mc_n500.sbatch  run_mc_n700.sbatch  run_os.sbatch  run_real_data_ds.py  simulation_n100.py  simulation_n1000.py  simulation_n200.py  simulation_n300.py  simulation_n500.py  simulation_n700.py
src/qte_thesis/final/run_on_cluster/: simulation.py
tests/: test_estimators.py  test_standard_error.py
